k8s_files/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pandacloud-app
  labels:
    app: pandacloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pandacloud-app
  template:
    metadata:
      labels:
        app: pandacloud-app
    spec:
      containers:
      - name: pandacloud-container
        image: 231778609415.dkr.ecr.us-east-1.amazonaws.com/manikiran/amazonprime:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: ecr-secret
