k8s_files/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazonprime-service
  namespace: manikiran
spec:
  selector:
    app: amazonprime
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
