k8s_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazonprime-ingress
  namespace: manikiran
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: peerings.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amazonprime-service
                port:
                  number: 80
